fixed the improvement in sidebar align with different devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,8 +457,10 @@ body {
 }
 
 .navbar.active {
-  max-height: 300px;
+  max-height: 387px;
   visibility: visible;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   transition-duration: 0.5s;
 }
 
@@ -469,7 +471,7 @@ body {
 .navbar-link {
   color: var(--charcoal);
   padding-block: 8px;
-  line-height: 1.5;
+  line-height: 2;
   transition: var(--transition-1);
 }
 
@@ -1000,6 +1002,9 @@ footer {
     border-radius: var(--radius-5);
     padding:30px;
   }
+  .container {
+    padding-inline: 37px;
+}
 }
 @media (min-width: 575px) {
   /**
@@ -1027,7 +1032,7 @@ footer {
     max-width: 540px;
     width: 100%;
     margin-inline: auto;
-    border-radius: var(--radius-5);
+    /* border-radius: var(--radius-5); */
   }
  
 
